--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,10 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer class="footer">
+    <div class="w-full sm:w-1/1 md:w-1/1 lg:w-1/1 xl:w-1/1 mb-4 bg-[#fc8c30] rounded-md">
+ 
+      <p class="text-sm text-white">Club Ajedrez 64 Escaques.</p>
+      <p class="text-sm text-white">Dirección: La Torre, 64</p>
+      <p class="text-sm text-white">Población: Villa de la Reina</p>
+
+    </div>
+
 </footer>
