--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -10,48 +10,53 @@ body {
   padding: 2rem;
   font-family: $font-family-sans-serif;
   font-size: 16px;
-  line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+  line-height: 24px; 
 }
 
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+a{
+  color:white;
+   text-decoration: none;
+ }
+ a:hover{
+   color:$bg-chess;
+ }
+ 
+ 
+.contenedor-article h6:before{
+  content:'';
+  display:block;
+  height: 2px;
+  margin-bottom: 25px;
+  margin-top:25px;
+  background: linear-gradient(to right, orange, transparent);
+  
 }
 
-.uoc-logo {
+.img{
+  padding-top:1em;
+  padding-left:5em;
+  padding-right:4em;
+ 
+}
+
+
+.logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1.5rem;
   max-width: 200px;
   height: auto;
+  clip-path:ellipse(50%);
 
   @media (min-width: $mqMinWidth) {
     max-width: none;
+    width:50%;
   }
 }
 
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
-
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
-  }
-}
-
-.uoc-footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
-  text-align: center;
+.footer {
+  margin-top: 2rem;
+ text-align: center;
 }
